GPS works in background but some more small fixes are needed.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
             </intent-filter>
         </activity>
         <service
-                android:name=".BackgroundTravelService"
-                android:exported="false"/>
+                android:name=".BackgroundTravelService" />
 
     </application>
 
