--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
                    android:value="${GOOGLE_MAPS_API_KEY}"/>
         <activity
-                android:name=".Activities.Main2Activity"
+                android:name=".Activities.MainActivity"
                 android:label="@string/title_activity_main2"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
