--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,32 @@
-sudo: required
-
 language: android
+sudo: required
 jdk: oraclejdk8
+
+env:
+  global:
+  - ANDROID_API_LEVEL=28
+  - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+  - ANDROID_ABI=armeabi-v7a
+
+android:
+  components:
+    - tools
+    - platform-tools
+    - tools
+    - extra-android-m2repository
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
+before_install:
+  - touch $HOME/.android/repositories.cfg
+  - yes | sdkmanager "platforms;android-28"
+  - yes | sdkmanager "build-tools;28.0.3"
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
@@ -13,28 +34,9 @@ cache:
   - $HOME/.gradle/wrapper/
   - $HOME/.android/build-cache
 
-env:
- global:
- - ANDROID_API=26
- - ANDROID_BUILD_TOOLS=26.0.2
-
-android:
-  components:
-  - tools
-  - tools # Running this twice get's the latest build tools (https://github.com/codepath/android_guides/wiki/Setting-up-Travis-CI)
-  - platform-tools
-  - android-${ANDROID_API}
-  - build-tools-${ANDROID_BUILD_TOOLS}
-  - extra
-
-licenses:
-  - 'android-sdk-preview-license-52d11cd2'
-  - 'android-sdk-license-.+'
-  - 'google-gdk-license-.+'
-  
-before_install:
-  - yes | sdkmanager "platforms;android-27"
-  
+before_script:
+  - chmod +x gradlew
 
 script:
-- ./gradlew clean test build
+  - ./gradlew clean build
+  - ./gradlew test
