--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,12 +28,12 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
                    android:value="${GOOGLE_MAPS_API_KEY}"/>
         <activity
-                android:name=".Activities$MainActivity"
+                android:name=".Activities.MainActivity"
                 android:label="@string/title_activity_main2"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name=".Activities$LoginActivity"
+                android:name=".Activities.LoginActivity"
                 android:theme="@style/AppTheme.NoActionBar"
         >
             <intent-filter>
